--- a/assets/default/css/lang_ar.css
+++ b/assets/default/css/lang_ar.css
@@ -426,7 +426,7 @@ div.dataTables_wrapper div.dataTables_filter input {
     border-right-color: rgb(220 53 69 / 0.1);
 }
 .fav-star{
-	right:-5px;
+	left:-5px;
 }
 .message-bubble.me .fav-star{
 	left: auto;
@@ -521,35 +521,96 @@ ul.totalList > li:last-child {
 .milestone-item {
 	padding-right:1.25rem
 }
+.ribbon-top-right {
+    left: -15px;
+}
+.ribbon-top-right span {
+    right: 30px;
+    transform: rotate(-45deg);
+}
+ul.dashboard-box-list.if-button > li {
+    padding-left: 64px;
+}
+ul.dashboard-box-list.if-double-button > li {
+    padding-left: 100px;
+}
+.dashboard-box .freelancer-overview .freelancer-name {
+	text-align: right;
+	margin-right:1.25rem;
+}
+.comment-by .status {
+    left: 0;
+}
+.comments ul li ul {
+	margin: 0 64px 0 0;
+}
+.comment-content {
+	padding: 0 100px 0 0;
+}
+.comments ul li ul {
+	border-right: 1px solid #e0e0e0;
+	padding-right: 25px;
+}
+.comments ul li ul li:before {
+	right: -25px;
+}
+.comment-content strong {
+	padding-left: 5px;
+}
+.avatar {
+	float: right;
+	right: 0px;
+}
+.dashboard-box-footer .backbtnproject {
+	margin-left:0.5rem
+}
+.dropdown-menu > li > a {
+	padding-left: 35px;
+}
+.thumbnail_sec > a.ico {	
+	margin-right:0.5rem;
+}
+.myradio .btn-group .btn + .btn {
+	margin-right:1rem
+}
+.checkbox label {
+	padding-right: 30px;
+}
+.checkbox label span.checkbox-icon {
+	right: 0;
+}
 
 @media (min-width: 768px) {
 
-.navbar-right .dropdown-menu {
-    left: auto !important;
-    right: 0 !important;
-}	
-.signup:before {
-	background-color:#29b6f6;
-}
-.signup:after {		
-	background-color:#2C597A;	
-}
-ul.totalList > li:nth-child(4n) {
-	border-left:none
-}
-.brr-0 {
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-}
+	.navbar-right .dropdown-menu {
+		left: auto !important;
+		right: 0 !important;
+	}	
+	.signup:before {
+		background-color:#29b6f6;
+	}
+	.signup:after {		
+		background-color:#2C597A;	
+	}
+	ul.totalList > li:nth-child(4n) {
+		border-left:none
+	}
+	.brr-0 {
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+	}
 
 }
-@media (min-width: 992px) {
-.process .border-right {
-    border-left: 1px solid #e1e1e1
-}
-.process .border-left {
-    border-right: 1px solid #e1e1e1
-}
+@media only screen and (min-width: 992px) {
+	.freelancer-actions {
+		margin-right: 98px;
+	}
+	.process .border-right {
+		border-left: 1px solid #e1e1e1
+	}
+	.process .border-left {
+		border-right: 1px solid #e1e1e1
+	}
 
 }
 
