--- a/assets/default/css/lang_ar.css
+++ b/assets/default/css/lang_ar.css
@@ -579,6 +579,9 @@ ul.dashboard-box-list.if-double-button > li {
 .checkbox label span.checkbox-icon {
 	right: 0;
 }
+.dashboard-status-button{
+	margin-right:5px;
+}
 
 @media (min-width: 768px) {
 
