--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -11399,7 +11399,7 @@ width: 100%;
 .job-overview .job-overview-inner ul li i {
 	position: absolute;
 	top: 0;
-	font-size: 24px;
+	font-size: 1.5rem;
 	color: #66676b;
 }
 /* Apply Now Button */
@@ -12272,7 +12272,7 @@ ul.dashboard-box-list > li:hover {
 	display: inline-block;
 	position: relative;
 	top: -2px;
-	margin: 0 4px 4px 0;
+	margin-bottom:4px;
 }
 .job-listing-footer .dashboard-status-button{
 	margin-bottom:-3px;
