--- a/hackground/assets/v3/css/adminlte.css
+++ b/hackground/assets/v3/css/adminlte.css
@@ -21809,7 +21809,7 @@ a.close.disabled, a.disabled.mailbox-attachment-close {
 .register-page {
   -ms-flex-align: center;
   align-items: center;
-  background-color: #e9ecef;
+  background-color: #f5f5f5;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
