--- a/assets/default/css/lang_ar.css
+++ b/assets/default/css/lang_ar.css
@@ -465,9 +465,6 @@ div.dataTables_wrapper div.dataTables_filter input {
 .message-reply .uploadButton {
 	margin:0.1rem auto 0 1rem;
 }
-.attachmentFile {
-	border-right: 1px solid #dee2e6;
-}
 .header-notifications-dropdown:before {
 	left: 43px;
 }
@@ -540,7 +537,6 @@ ul.dashboard-box-list.if-double-button > li {
 }
 .dashboard-box .freelancer-overview .freelancer-name {
 	text-align: right;
-	margin-right:1.25rem;
 }
 .comment-by .status {
     left: 0;
@@ -602,9 +598,15 @@ ul.dashboard-box-list.if-double-button > li {
 	ul.totalList > li:nth-child(4n) {
 		border-left:none
 	}
+	.dashboard-box .freelancer-overview .freelancer-name {
+		margin-right:1.25rem;
+	}
 	.brr-0 {
 		border-top-left-radius: 0px;
 		border-bottom-left-radius: 0px;
+	}
+	.attachmentFile {
+		border-right: 1px solid #dee2e6;
 	}
 
 }
@@ -621,9 +623,15 @@ ul.dashboard-box-list.if-double-button > li {
 
 }
 
- @media (max-width: 991px) {
+ @media (max-width: 991.99px) {
 	.message-bubble.me .message-text{
 		margin:0;
+	}
+	ul.dashboard-box-list.if-button > li.application-list{
+		padding-left:1.25rem;
+	}
+	ul.dashboard-box-list.if-button > li.application-list .freelancer-overview{
+		padding-left:64px;
 	}
 }
 /* END CSS */
