--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -847,6 +847,7 @@ ul.totalList > li > i {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
+	padding-top: 2px;
     text-overflow: ellipsis;
 }
 .dashboard-box .job-listing h4.job-listing-title {
@@ -1060,9 +1061,6 @@ ul.skill-tags > li {
     color: #777;
 	font-size:0.813rem;
 }
-.attachScrollbar {
-	height: 450px
-}
 .attach-thumbnail{
 	max-width:300px
 }
@@ -1186,7 +1184,7 @@ ul.display-inline li {
 #filter {
     position: absolute;
     right: 20px;
-    top: -40px;
+    top: 0;
     z-index: 9;
 }
 .freelancer-socials span.bookmark-icon{
